added tools and mustache dependencies to test projects

--- a/builders/csharp/Doodads.Builder.Test/Default.html
+++ b/builders/csharp/Doodads.Builder.Test/Default.html
@@ -3,7 +3,9 @@
     <title></title>
     <script type="text/javascript" src="JavaScript/jquery-1.6.4.js"></script>
     <script type="text/javascript" src="JavaScript/yepnope.js"></script>
+    <script type="text/javascript" src="JavaScript/mustache.js"></script>
     <script type="text/javascript" src="JavaScript/doodads.js"></script>
+    <script type="text/javascript" src="JavaScript/doodads.tools.js"></script>
     <script type="text/javascript">
         $(function () {
            /* doodads.create('Derived.component', { text: '[DERIVED] From index.html' })
