--- a/builders/nodejs/test/index.html
+++ b/builders/nodejs/test/index.html
@@ -4,7 +4,9 @@
     <script src="javascript/jquery-1.6.4.js"></script>
     <script src="javascript/jquery.debounce-1.0.5.js"></script>
     <script src="javascript/yepnope.js"></script>
+    <script src="javascript/mustache.min.js"></script>
     <script src="javascript/doodads.js"></script>
+    <script src="javascript/doodads.tools.js"></script>
     <script>
         $(function () {
             doodads.create('TestDoodad.doodad', { text: '[TESTDOODAD] From index.html' })
