converted TextBox & NumericTextBox to new structure

--- a/src/doodads/NumericTextBox/NumericTextBox.html
+++ b/src/doodads/NumericTextBox/NumericTextBox.html
@@ -1,10 +1,9 @@
 ﻿<span>
-    <component 
+    <doodad 
         id="input" 
-        url="/Components/TextBox.component" 
+        url="/doodads/TextBox.doodad" 
         options="{
-            showStar: {{showStar}}
-            , enabled: {{enabled}}
+            enabled: {{enabled}}
             , validates: false
             , text: '{{value}}' 
         }" 
