Amalgamate the various support libraries (doodads.tools.js) into one external library that doodads.js depends on. Fix a bug with the DropDown doodad not loading Fix a bug with the TestBox doodad not loading Use a CDN version of jQuery

--- a/builders/csharp/Doodads.Builder.Test/Default.html
+++ b/builders/csharp/Doodads.Builder.Test/Default.html
@@ -1,11 +1,11 @@
 ﻿<html>
 <head>
     <title></title>
-    <script type="text/javascript" src="JavaScript/jquery-1.7.1.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="JavaScript/jquery.tipsy.js"></script>
     <script type="text/javascript" src="JavaScript/mustache.js"></script>
+    <script type="text/javascript" src="JavaScript/grabbag.js"></script>
     <script type="text/javascript" src="JavaScript/doodads.js"></script>
-    <script type="text/javascript" src="JavaScript/doodads.tools.js"></script>
     <style>
         @import url('tipsy.css');
         
@@ -33,7 +33,9 @@
                     doodad.dataSource([
                         { text: 'Yakko', value: 1 },
                         { text: 'Wakko', value: 2 },
-                        { text: 'Dot', value: 3 }
+                        { text: 'Dot', value: 3 },
+                        { text: 'Dr. Otto Scratchansniff', value: 4 },
+                        { text: 'Hello Nurse', value: 5 }
                     ]);
                 });
 
